--- a/home.html
+++ b/home.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>Display Page</title>
-    <link rel="stylesheet" href="indes.css">
+    <link rel="stylesheet" href="index.css">
+    
 </head>
 <body>
     <div class="main-container">
